# Stable_Rust_Model

./: .gitignore  Cargo.toml  README.md
docs/: samples.md
inference-ui/: .env.example  .gitignore  Cargo.toml  Dockerfile  Trunk.toml  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
inference-ui/.github/workflows/: deploy.yml
inference-ui/dev-dist/: sw.js  sw.js.map
inference-ui/public/: silent-check-sso.html
inference-ui/src/: App.css  App.tsx  app.rs  index.css  lib.rs  main.lazy.tsx
inference-ui/src/components/: Footer.tsx  Header.tsx  LanguageSwitcher.tsx  ThemeSwitcher.tsx  icons.tsx
inference-ui/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  buttonVariants.ts  command.tsx  form.tsx  multi-select.tsx  select.tsx
inference-ui/src/constants/: roles.ts
inference-ui/src/context/: ThemeContext.tsx  theme-context-definition.ts
inference-ui/src/hooks/: useTheme.ts
inference-ui/src/i18n/: index.ts
inference-ui/src/i18n/translations/: en.json  fr.json
inference-ui/src/layouts/: HomeLayout.tsx
inference-ui/src/pages/: analyze.rs  demo.rs  home.rs  mod.rs
inference-ui/src/pages/demo/: DemoPage.tsx
inference-ui/src/pages/welcome/: HomePage.tsx
inference-ui/src/router/: AppRouter.tsx  ProtectedRoute.tsx  index.ts  routes.ts
inference-ui/src/test/mocks/: db.ts
src/: config.rs  data.rs  training.rs
