[package]
name = "Burn_model"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.19.0", features = ["wgpu", "std", "tui", "train", "vision", "autodiff"], default-features = false }
burn-ndarray = "0.19.0"
burn-wgpu = "0.19.0"
burn-tensor = "0.19.0"
burn-train = "0.19.0"


image = "0.25.9"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10.0"


axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
tract-onnx = "0.21"
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
