[package]
name = "inference-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.5", features = ["http"] }
gloo-file = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
  "File", "FileList", "HtmlInputElement", "DragEvent", "DataTransfer",
  "Url", "Blob", "FormData", "Window", "Request", "RequestInit", "Response"
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
